--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3001
-MONGO_URL = "mongodb+srv://Soumallya:soumallya@cluster0.ai6xx.mongodb.net/ticket?retryWrites=true&w=majority"
+MONGO_URL = "mongodb://localhost:27017/ticket"
 TOKEN_SECRET = "JwzKG2DqfitLLG70LWkE4LXUKEX9HGbRM7c8jBrSypg2aA43RF"
